--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
 main:
-  - title: "CV"
-    url: /latex-cv/cv_science_KLS.pdf
+#  - title: "CV"
+#    url: /latex-cv/cv_science_KLS.pdf
   - title: "Publications"
-    url: https://scholar.google.com/citations?hl=en&user=TlglgLgAAAAJ
-  - title: "Posts"
-    url: /year-archive/
+    url: https://scholar.google.com/citations?user=5Ygy97MAAAAJ&hl=en&oi=ao
+#  - title: "Posts"
+#    url: /year-archive/
 #  - title: "Talks"
 #    url: /talks/
 #  - title: "Teaching"
