--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zena Lapp"
-  avatar           : 
+  avatar           : "lapp.jpg"
   bio              : "Bioinformatics PhD Student at U-M"
   location         : "Ann Arbor, MI"
   employer         :
