--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/zenalapp/
+  linkedin         : zenalapp
   orcid            : https://orcid.org/0000-0003-4674-2176
   pinterest        :
   soundcloud       :
