--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zena Lapp"
   avatar           : "lapp.jpg"
-  bio              : "Postdoctoral Associate at the Duke Global Health Institute"
+  bio              : "Postdoctoral Associate at Duke Global Health Institute"
   location         : "Ann Arbor, MI"
   employer         :
   pubmed           :
