--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Zena Lapp"
   avatar           : "lapp.jpg"
   bio              : "Postdoctoral Associate at Duke Global Health Institute"
-  location         : "Ann Arbor, MI"
+  location         : "Durham, NC"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=5Ygy97MAAAAJ&hl=en&oi=ao"
