Update email address

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=5Ygy97MAAAAJ&hl=en&oi=ao"
-  email            : "zena.lapp@duke.edu"
+  email            : "zenalapp@lanl.gov"
   researchgate     :  
   uri              :
   bitbucket        :
